# Qt_Chrome-Dino-Game

./: CMakeLists.txt  Chrome_Dino  README.md  Resources.qrc  cloud.cpp  cloud.h  config.h  dino_image.cpp  dino_image.h  dinosaur.cpp  dinosaur.h  gamecounter.cpp  gamecounter.h  horizonline.cpp  horizonline.h  nightmode.cpp  nightmode.h  obstacle.cpp  obstacle.h  scene.cpp  scene.h  widget.cpp  widget.h  widget.ui
